--- a/taskColl01Xiaowei/demo02/css/index.css
+++ b/taskColl01Xiaowei/demo02/css/index.css
@@ -301,7 +301,6 @@ header tfoot td {
     padding-left: 5px;
     font-weight: bold;
 }
-
 .form-cont {
 
 }
@@ -315,6 +314,82 @@ header tfoot td {
 }
 
 
+fieldset{
+    /*width: 80% ;*/
+    padding-left: 256px;
+    margin:0 auto;
+    text-align: center;
+}
+
+fieldset .item-cont {
+    font-size: 10px;
+}
+
+.item-cont .label-cont {
+    width: 200px;
+    height: 22px;
+    line-height: 22px;
+    float: left;
+    text-align: right;
+    margin-right: 12px;
+    margin-bottom: 10px;
+}
+
+
+.input-cont {
+    /*position: relative;*/
+
+}
+
+.input-cont.sex-item{
+    text-align: left;
+}
+
+.input-cont .info {
+    text-align: left; 
+    height: 36px;
+    line-height: 36px;
+}
+
+
+.item-cont .label-cont label {
+
+}
+
+.item-cont .input-cont {
+    float: left;
+}
+
+.item-cont .input-cont input,.item-cont .input-cont select,.item-cont .input-cont textarea {
+    /*float: left;*/
+    height: 22px;
+    font-size: 12px;
+}
+
+.item-cont:after {
+    content: "."
+}
+.item-cont {
+    clear:both;
+}
+
+
+.form-item input[type="submit"]{
+   display: block;
+   background: #009;
+   width: 100%;
+   text-align: center;
+   height:50px;
+   outline: none;
+   border: none;
+   color: #fff;
+   border-radius: 5px;
+} 
+
+/* 
+
+
+
  .form-item {  
    font:100% verdana,arial,sans-serif;
  }
@@ -326,7 +401,7 @@ header tfoot td {
 
  .form-item label {
     float: left;
-    width: 200px;/* 定一个宽，右对齐 使得label对齐*/
+    width: 200px;定一个宽，右对齐 使得label对齐
     margin-left: 200px;
     text-align: right;
     font-size: 10px;
@@ -353,7 +428,9 @@ header tfoot td {
     border: none;
     color: #fff;
     border-radius: 5px;
- }
+ } */
+
+
 
 footer {
     background: #000;
