--- a/taskColl01Xiaowei/demo03/css/index.css
+++ b/taskColl01Xiaowei/demo03/css/index.css
@@ -11,4 +11,17 @@ body {padding: 20px;}
 .team_logo_cont img {width: 80px;height: 80px;}
 .team_logo_cont h1 {float: right;font-size: 16px;}
 
-/*.team_intro_cont {background: #fff;position: relative;left:160px; }*/
+.team_member_cont {float: right;width: 80px;padding:20px 20px 0 20px; background: #fff;}
+.team_member_cont img {margin-bottom: 20px;}
+
+.team_intro_cont {margin:0 140px 0 220px;background: #fff;padding: 20px;}
+.team_intro_cont article {font-size: 14px;}
+.team_intro_cont article header {}
+.team_intro_cont article h2 {font-size: 20px;font-weight: bold;}
+.team_intro_cont .dialog {margin-bottom: 10px;}
+.team_intro_cont section p {margin-bottom: 10px;line-height: 16px;}
+.team_intro_cont section p.explain {line-height: 30px;}
+.team_intro_cont section header {margin-bottom: 10px;}
+
+
+
