--- a/taskColl01Xiaowei/demo03/css/index01.css
+++ b/taskColl01Xiaowei/demo03/css/index01.css
@@ -1,5 +1,5 @@
 body {padding: 20px;}
-.cont {background: #eee;padding: 20px;}
+.cont {background: #eee;padding: 20px;position: relative;}
 .cont:after {
 	content:".";        
      display:block;        
@@ -7,11 +7,11 @@ body {padding: 20px;}
      clear:both;        
      visibility:hidden;   
 }
-.team_logo_cont {float: left; width: 160px;padding: 20px;background: #fff;}
+.team_logo_cont {position: absolute;left: 20px;top: 20px; width: 160px;padding: 20px;background: #fff;}
 .team_logo_cont img {width: 80px;height: 80px;}
 .team_logo_cont h1 {float: right;font-size: 16px;}
 
-.team_member_cont {float: right;width: 80px;padding:20px 20px 0 20px; background: #fff;}
+.team_member_cont {float: right; width: 80px;padding:20px 20px 0 20px; background: #fff;}
 .team_member_cont img {margin-bottom: 20px;}
 
 .team_intro_cont {margin:0 140px 0 220px;background: #fff;padding: 20px;}
