--- a/taskColl01Xiaowei/demo06/css/index.css
+++ b/taskColl01Xiaowei/demo06/css/index.css
@@ -2,5 +2,24 @@ body {background: #fff;}
 .main_cont{width: 894px;margin:0 auto;}
 header.main_cont{position: relative; height: 60px;border-bottom: 2px solid #938e8c;}
 header.main_cont h1{float: left;position: relative; width: 110px; height: 100%;background: #d45d5c;}
-header.main_cont h1 a{position: absolute; bottom: 6px;left: 7px; font-size: 9px;color: #fff;}
-header.main_cont span{color:#d45d5c;position: absolute;bottom: 6px;right: 0;font-size: 8px; }
+header.main_cont h1 a{position: absolute; bottom: 6px;left: 7px; font-size: 12px;color: #fff;}
+header.main_cont span{color:#d45d5c;position: absolute;bottom: 6px;right: 0;font-size: 12px; }
+
+#banner_cont {height: 301px;margin-top: 36px;}
+#banner {width: 641px;height:100%; position: relative;}
+#banner .glass{width: 190px;height: 100%;position: absolute;}
+#banner .item1{left: 0;top: 0; background: #428c59;opacity: 0.5;}
+#banner .item2{right: 0;top: 0;background: #cc7681;opacity: 0.5;}
+
+#sidebar {width: 204px;height:100%;float: right;border-top: 2px solid #cc8091;background: #0f0;}
+#sidebar h2 {font-size: 24px;text-transform: uppercase;margin-top: 13px;}
+
+
+#sidebar .caption {
+    font: 24px "微软雅黑";
+    /*font-size: 24px;*/
+    text-decoration: underline;
+    color: #000000;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+}
